# quasar-wayland

./: LICENSE  README.md  cabal.project  default.nix  flake.nix  ghcid  protocols  quasar-wayland.cabal
.github/workflows/: build.yml
example/: Main.hs
examples/: Client.hs  GlesClient.hs  GlesProxy.hs  Proxy.hs  Server.hs  ShmClient.hs  Skia.hs  examples.cabal  quasar-wayland-examples.cabal
quasar-wayland/: quasar-wayland.cabal
quasar-wayland-gles/: README.md  quasar-wayland-gles.cabal
quasar-wayland-gles/data/shader/: basic.frag  basic.vert  copy.frag  copy.vert
quasar-wayland-gles/src/Quasar/Wayland/: Gles.hs
quasar-wayland-gles/src/Quasar/Wayland/Gles/: Backend.hs  Debug.hs  Dmabuf.hs  Egl.hs  Types.hs
quasar-wayland-gles/src/Quasar/Wayland/Gles/Egl/: Debug.hs  Types.hs
quasar-wayland-gles/src/Quasar/Wayland/Gles/Utils/: InlineC.hs  Stat.hs
quasar-wayland-skia/: quasar-wayland-skia.cabal
quasar-wayland-skia/src/Quasar/Wayland/: Skia.hs
quasar-wayland-skia/src/Quasar/Wayland/Skia/: CTypes.hs  Dmabuf.hs  GL.hs  Thread.hs
quasar-wayland-skia/src/Quasar/Wayland/Skia/GL/: Debug.hs  Egl.hs  Gles.hs  Types.hs
quasar-wayland-skia/src/Quasar/Wayland/Skia/GL/Egl/: Debug.hs  Types.hs
quasar-wayland-skia/src/Quasar/Wayland/Skia/Utils/: InlineC.hs  Stat.hs
quasar-wayland/protocols/: update-protocols
quasar-wayland/src/Quasar/Wayland/: Backend.hs  Client.hs  Connection.hs  Dmabuf.hs  Protocol.hs  Region.hs  Server.hs  Shm.hs  SinglePixelBuffer.hs  Surface.hs
quasar-wayland/src/Quasar/Wayland/Client/: Backend.hs  JuicyPixels.hs  Output.hs  Registry.hs  Seat.hs  ShmBuffer.hs  Surface.hs  Sync.hs  XdgShell.hs
quasar-wayland/src/Quasar/Wayland/Protocol/: Core.hs  Generated.hs  TH.hs
quasar-wayland/src/Quasar/Wayland/Server/: DataTransfer.hs  DummyOutput.hs  Registry.hs  Seat.hs  Shm.hs  Socket.hs  Surface.hs  XdgShell.hs
quasar-wayland/src/Quasar/Wayland/Shared/: DummyWindowManager.hs  FnWindowManager.hs  Surface.hs  WindowApi.hs  WindowManagerApi.hs  WindowMultiplexer.hs
quasar-wayland/src/Quasar/Wayland/Utils/: Disposer.hs  InlineC.hs  Once.hs  Resources.hs  SharedFd.hs  SharedMemory.hs  Socket.hs  Stat.hs
skia/: default.nix  result  skia-deps.nix  skia-make-deps.sh
src/Quasar/Wayland/: Client.hs  Connection.hs  Core.hs  Display.hs  Protocol.hs  Region.hs  Registry.hs  Server.hs  Shm.hs  Surface.hs  TH.hs
src/Quasar/Wayland/Client/: Buffer.hs  JuicyPixels.hs  Registry.hs  Socket.hs  Surface.hs  Sync.hs  XdgShell.hs
src/Quasar/Wayland/Common/: WindowManagerApi.hs
src/Quasar/Wayland/Protocol/: Core.hs  Display.hs  Generated.hs  TH.hs
src/Quasar/Wayland/Server/: Registry.hs  Shm.hs  Surface.hs  XdgShell.hs
src/Quasar/Wayland/Shared/: WindowManagerApi.hs
src/Quasar/Wayland/Utils/: InlineC.hs  Once.hs  SharedMemory.hs  Socket.hs
test/Quasar/Wayland/: WlFixedSpec.hs
