cabal-version: 3.0

name: quasar-wayland
version: 0.1.0.0
category: Wayland, User Interfaces
description: An implementation of the Wayland protocol.
author: Jens Nolte
maintainer: Jens Nolte
copyright: 2021 Jens Nolte
license: BSD-2-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://git.c3pb.de/jens/quasar-wayland.git

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-methods

common shared-executable-properties
  import: shared-properties
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N -I0"

library
  import: shared-properties
  exposed-modules:
    Quasar.Wayland.Client
    Quasar.Wayland.Client.Buffer
    Quasar.Wayland.Client.JuicyPixels
    Quasar.Wayland.Client.Registry
    Quasar.Wayland.Client.Socket
    Quasar.Wayland.Client.Sync
    Quasar.Wayland.Connection
    Quasar.Wayland.Protocol
    Quasar.Wayland.Protocol.Generated
    Quasar.Wayland.Protocol.TH
    Quasar.Wayland.Region
    Quasar.Wayland.Server
    Quasar.Wayland.Server.Registry
    Quasar.Wayland.Server.Shm
    Quasar.Wayland.Server.Socket
    Quasar.Wayland.Server.Surface
    Quasar.Wayland.Shm
    Quasar.Wayland.Surface
  other-modules:
    Quasar.Wayland.Protocol.Core
    Quasar.Wayland.Utils.InlineC
    Quasar.Wayland.Utils.SharedMemory
    Quasar.Wayland.Utils.Socket
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    directory,
    exceptions,
    filepath,
    inline-c,
    JuicyPixels,
    mtl,
    network,
    quasar,
    template-haskell,
    unix,
    unordered-containers,
    utf8-string,
    stm,
    xml,
  hs-source-dirs:
    src

executable quasar-wayland-example-client
  import: shared-executable-properties
  build-depends:
    base,
    JuicyPixels,
    quasar,
    quasar-wayland,
  main-is: Client.hs
  hs-source-dirs:
    examples

executable quasar-wayland-example-server
  import: shared-executable-properties
  build-depends:
    base,
    quasar,
    quasar-wayland,
  main-is: Server.hs
  hs-source-dirs:
    examples

test-suite quasar-wayland-test
  import: shared-executable-properties
  type: exitcode-stdio-1.0
  build-depends:
    base,
    hspec,
    inline-c,
    quasar,
    quasar-wayland,
    QuickCheck,
  main-is: Spec.hs
  other-modules:
    Quasar.Wayland.WlFixedSpec
  hs-source-dirs:
    test
