cabal-version: 3.0

name: quasar-wayland-skia
version: 0.1.0.0
category: Wayland, User Interfaces
description: Skia integration for quasar-wayland
author: Jens Nolte
license: BSD-2-Clause
build-type: Simple

source-repository head
  type: git
  location: https://github.com/queezle42/quasar-wayland

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BangPatterns
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MagicHash
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    TemplateHaskellQuotes
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-methods

library
  import: shared-properties
  exposed-modules:
    Quasar.Wayland.Skia
    Quasar.Wayland.Skia.CTypes
    Quasar.Wayland.Skia.GL
  other-modules:
    Quasar.Wayland.Skia.GL.Debug
    Quasar.Wayland.Skia.GL.Egl
    Quasar.Wayland.Skia.GL.Egl.Debug
    Quasar.Wayland.Skia.GL.Egl.Types
    Quasar.Wayland.Skia.GL.Gles
    Quasar.Wayland.Skia.GL.Types
    Quasar.Wayland.Skia.Thread
    Quasar.Wayland.Skia.Utils.InlineC

  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    hashable,
    inline-c,
    inline-c-cpp,
    nyan-interpolation,
    quasar,
    quasar-wayland,
    template-haskell,
  extra-libraries:
  pkgconfig-depends:
    egl,
    glesv2,
    skia,
  hs-source-dirs:
    src
