cabal-version: 3.0

name: quasar-wayland
version: 0.1.0.0
category: Wayland, User Interfaces
description: An implementation of the Wayland protocol.
author: Jens Nolte
maintainer: Jens Nolte
license: BSD-2-Clause
build-type: Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/queezle42/quasar-wayland

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    TemplateHaskellQuotes
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

library
  import: shared-properties
  exposed-modules:
    Quasar.Wayland.Client
    Quasar.Wayland.Client.JuicyPixels
    Quasar.Wayland.Client.Output
    Quasar.Wayland.Client.Registry
    Quasar.Wayland.Client.Seat
    Quasar.Wayland.Client.ShmBuffer
    Quasar.Wayland.Client.Socket
    Quasar.Wayland.Client.Surface
    Quasar.Wayland.Client.Sync
    Quasar.Wayland.Client.XdgShell
    Quasar.Wayland.Connection
    Quasar.Wayland.Dmabuf
    Quasar.Wayland.Protocol
    Quasar.Wayland.Protocol.Generated
    Quasar.Wayland.Protocol.TH
    Quasar.Wayland.Region
    Quasar.Wayland.Server
    Quasar.Wayland.Server.DummyOutput
    Quasar.Wayland.Server.Registry
    Quasar.Wayland.Server.Shm
    Quasar.Wayland.Server.Socket
    Quasar.Wayland.Server.Surface
    Quasar.Wayland.Server.XdgShell
    Quasar.Wayland.Shared.DummyWindowManager
    Quasar.Wayland.Shared.FnWindowManager
    Quasar.Wayland.Shared.Surface
    Quasar.Wayland.Shared.WindowApi
    Quasar.Wayland.Shared.WindowMultiplexer
    Quasar.Wayland.Shm
    Quasar.Wayland.SinglePixelBuffer
    Quasar.Wayland.Utils.Resources
    Quasar.Wayland.Utils.SharedFd
    Quasar.Wayland.Utils.SharedMemory
    Quasar.Wayland.Utils.Stat
  other-modules:
    Quasar.Wayland.Protocol.Core
    Quasar.Wayland.Utils.InlineC
    Quasar.Wayland.Utils.Once
    Quasar.Wayland.Utils.Socket
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    directory,
    exceptions,
    filepath,
    hashable,
    inline-c,
    JuicyPixels,
    mtl,
    network,
    quasar,
    template-haskell,
    unix,
    unordered-containers,
    utf8-string,
    stm,
    xml,
  hs-source-dirs:
    src

test-suite quasar-wayland-test
  import: shared-properties
  type: exitcode-stdio-1.0
  build-depends:
    base,
    hspec,
    inline-c,
    quasar,
    quasar-wayland,
    QuickCheck,
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N"
  main-is: Spec.hs
  other-modules:
    Quasar.Wayland.WlFixedSpec
  hs-source-dirs:
    test
